--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ homepage = "https://github.com/MikulasBar/pemel"
 repository = "https://github.com/MikulasBar/pemel"
 license = "MIT"
 keywords = ["math", "expression", "parser", "evaluator"]
-categories = ["science", "math"]
+categories = ["science", "mathematics"]
 readme = "README.md"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
